Fixed the route error message z-index

--- a/app/javascript/stylesheets/tripPlanningView.scss
+++ b/app/javascript/stylesheets/tripPlanningView.scss
@@ -431,6 +431,7 @@
   animation-duration: 0.3s;
   animation-name: showRouteError;
   animation-timing-function: ease;
+  z-index: 100;
 }
 
 
